[package]
name = "mdblog"
version = "0.21.0"
authors = ["FuGangqiang <fu_gangqiang@qq.com>"]
description = "static site generator from markdown files."
repository = "https://github.com/FuGangqiang/mdblog.rs"
homepage = "https://github.com/FuGangqiang/mdblog.rs"
documentation = "https://docs.rs/mdblog"
keywords = ["blog", "markdown", "static", "site", "generator"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "mdblog"
doc = false

[dependencies]
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"]}
config = "0.11"
derive_more = { version = "0.99", features = ["display", "from"]}
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["rc", "std", "derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.7"
tera = "1"
walkdir = "2.3"
tempfile = "3"
rocket = "0.4"
rocket_contrib = "0.4"
open = "5"
notify = "6"
notify-debouncer-mini = "0.4"
glob = "0.3"
shellexpand = "3"
time = { version = "0.3", features = ["serde", "local-offset", "formatting", "parsing"] }
