[package]
name = "mdblog"
version = "0.22.0"
authors = ["FuGangqiang <fu_gangqiang@qq.com>"]
description = "static site generator from markdown files."
repository = "https://github.com/FuGangqiang/mdblog.rs"
homepage = "https://github.com/FuGangqiang/mdblog.rs"
documentation = "https://docs.rs/mdblog"
keywords = ["blog", "markdown", "static", "site", "generator"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "mdblog"
doc = false

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"]}
config = { version = "0.14", default-features = false, features = ["toml"]}
derive_more = { version = "0.99", features = ["display", "from"]}
pulldown-cmark = { version = "0.11", default-features = false, features = ["html", "simd"] }
serde = { version = "1.0", features = ["rc", "std", "derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tera = "1"
walkdir = "2.3"
tempfile = "3"
open = "5"
notify = "6"
notify-debouncer-mini = "0.4"
glob = "0.3"
shellexpand = "3"
time = { version = "0.3", features = ["serde", "local-offset", "formatting", "parsing"] }
mime_guess = "2.0.5"
axum = "0.7"
tokio = { version = "1", features = ["fs"] }
tower-http = { version = "0.5", features = ["trace"]}
